--- a/Circulate_NM.Rmd
+++ b/Circulate_NM.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Notebook"
+title: "CIRCULATE analysis"
 output: html_notebook
 ---
 ```{r}
@@ -374,17 +374,63 @@ ggforest(cox_fit,data = cir_data)
 summary(cox_fit)
 ```
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
-
+# Extended Figure 2
 ```{r}
-plot(cars)
+
+require(openxlsx)
+require(data.table)
+require(ggplot2)
+
+dt.timepoints <- read.xlsx('NMED sup table.xlsx', sheet = 'Timepoints')
+setDT(dt.timepoints)
+
+dt.pos_baseline <- dt.timepoints[VISITTYPE=='Initial Collection' & Result=='POSITIVE',]
+dt.pos_4wMRD    <- dt.timepoints[VISITTYPE=='Post-Surgery' & Timepoint=='4WEEK' & Result=='POSITIVE',]
+
+p.ExtFig2A <-
+  dt.pos_baseline %>%
+  ggplot(aes(x=Stage,y=MTM,fill=Stage)) +
+  scale_y_log10()+
+  geom_violin(alpha=0.2)+
+  leg.no+ylab('MTM/mL')+
+  geom_boxplot(alpha=0.6)
+
+
+t.test(dt.pos_baseline[Stage=='I',  log10(MTM)],dt.pos_baseline[Stage=='II',log10(MTM)])
+t.test(dt.pos_baseline[Stage=='II', log10(MTM)],dt.pos_baseline[Stage=='III',log10(MTM)])
+t.test(dt.pos_baseline[Stage=='III',log10(MTM)],dt.pos_baseline[Stage=='IV',log10(MTM)])
+
+
+p.ExtFig2B <-
+  dt.pos_4wMRD %>%
+  ggplot(aes(x=Stage,y=MTM,fill=Stage)) +
+  scale_y_log10()+
+  leg.no+xlab('Stage')+ylab('MTM/mL')+
+  geom_violin(alpha=0.2)+
+  geom_boxplot(alpha=0.6)
+
+
+p.ExtFig2C <-
+  dt.pos_baseline %>%
+  ggplot(aes(x=StageMRD,y=MTM,fill=Stage)) +
+  scale_y_log10()+
+  geom_violin(alpha=0.2)+
+  leg.no+xlab('Stage and MRD status')+ylab('MTM/mL')+
+  geom_boxplot(alpha=0.6)
+
+
+p.ExtFig2D <-
+  dt.pos_4wMRD[Stage!='I',] %>%
+  ggplot(aes(x=StageClr,y=MTM,fill=Stage)) +
+  scale_y_log10(labels = scales::comma)+
+  leg.no+xlab('Stage and Cleared status')+ylab('MTM/mL')+
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(), panel.background = element_blank())+
+  geom_violin(alpha=0.2)+
+  geom_boxplot(alpha=0.6)
+
+t.test(dt.pos_4wMRD[StageClr=='II Yes', log10(MTM)],dt.pos_baseline[StageClr=='II No', log10(MTM)])
+t.test(dt.pos_4wMRD[StageClr=='III Yes',log10(MTM)],dt.pos_baseline[StageClr=='III No',log10(MTM)])
+t.test(dt.pos_4wMRD[StageClr=='IV Yes', log10(MTM)],dt.pos_baseline[StageClr=='IV No', log10(MTM)])
+
 ```
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Cmd+Shift+K* to preview the HTML file). 
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
 
